# opendivination

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.sisyphus/: boulder.json
.sisyphus/notepads/opendivine-entropy-sources/: learnings.md
.sisyphus/notepads/opendivine-v0.1/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: opendivine-v0.1.md
adhoc/archive/: launch_copy.md
assets/: hero.tape
examples/: basic_draw.py  custom_source.py  iching_changing_lines.py  provenance_audit.py
skills/: AGENTS.md
skills/divination/: SKILL.md
skills/divination-setup/: SKILL.md
skills/divination-setup/agents/: openai.yaml
skills/divination-setup/scripts/: run_opendivination.py
skills/divination/agents/: openai.yaml
skills/divination/examples/: config.json
skills/divination/references/: cli.md
skills/divination/scripts/: run_opendivination.py
src/opendivination/: __init__.py  config.py  types.py
src/opendivination/cli/: main.py
src/opendivination/core/: coherence.py  provenance.py  registry.py
src/opendivination/corpora/iching/: NOTICE  __init__.py  data.json  trigrams.json
src/opendivination/corpora/tarot/: NOTICE  __init__.py  data.json  visual_captions.json
src/opendivination/embeddings/: __init__.py  base.py  cache.py  profiles.py  providers.py
src/opendivination/oracles/: iching.py  iching_text.py  resonance.py  tarot.py  tarot_text.py
src/opendivination/sources/: anu.py  csprng.py  openentropy.py  outshift.py  qbert.py
src/opendivine/: __init__.py  types.py
src/opendivine/cli/: main.py
src/opendivine/core/: provenance.py  registry.py  sampling.py
src/opendivine/corpora/iching/: __init__.py  data.json
src/opendivine/corpora/tarot/: __init__.py  data.json
src/opendivine/mcp/: __main__.py  server.py
src/opendivine/oracles/: iching.py  tarot.py
src/opendivine/sources/: anu.py  csprng.py  openentropy.py  outshift.py  qbert.py
tests/: conftest.py  test_cli.py  test_coherence.py  test_config.py  test_iching.py  test_mcp.py  test_provenance.py  test_resonance.py  test_sampling.py  test_skill_runner.py  test_sources.py  test_tarot.py
