[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendivination"
version = "0.1.0"
description = "Oracle SDK and CLI for human/LLM divination with auditable entropy provenance"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Amenti Labs"}]
requires-python = ">=3.10"
keywords = ["qrng", "quantum", "oracle", "tarot", "iching", "divination", "entropy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typer[all]>=0.12",
    "pydantic>=2.8",
]

[project.optional-dependencies]
hardware = ["openentropy>=0.12"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
opendivination = "opendivination.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/opendivination"]

[tool.mypy]
strict = true
warn_return_any = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["httpx", "typer", "openentropy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opendivination.cli.main"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
